versioned_docs/version-5.3/indexes/querying/intersection.mdx
---
title: "Querying: Intersection"
hide_table_of_contents: true
sidebar_label: Intersection
sidebar_position: 9
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "nodejs"];


# Querying: Intersection
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">


To allow users to `Intersect` queries on the server-side and return only documents that match **all** the provided sub-queries, we introduced the query intersection feature.

Let's consider a case where we have a T-Shirt class:

<TabItem value="intersection_1" label="intersection_1">
<CodeBlock language="csharp">
{`public class TShirt
\{
    public string Id \{ get; set; \}

    public int ReleaseYear \{ get; set; \}

    public string Manufacturer \{ get; set; \}

    public List<TShirtType> Types \{ get; set; \}
\}

public class TShirtType
\{
    public string Color \{ get; set; \}

    public string Size \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

We will fill our database with few records:

<TabItem value="intersection_3" label="intersection_3">
<CodeBlock language="csharp">
{`session.Store(new TShirt
\{
    Id = "tshirts/1",
    Manufacturer = "Raven",
    ReleaseYear = 2010,
    Types = new List<TShirtType>
            \{
                new TShirtType \{Color = "Blue", Size = "Small"\},
                new TShirtType \{Color = "Black", Size = "Small"\},
                new TShirtType \{Color = "Black", Size = "Medium"\},
                new TShirtType \{Color = "Gray", Size = "Large"\}
            \}
\});

session.Store(new TShirt
\{
    Id = "tshirts/2",
    Manufacturer = "Wolf",
    ReleaseYear = 2011,
    Types = new List<TShirtType>
            \{
                new TShirtType \{ Color = "Blue",  Size = "Small" \},
                new TShirtType \{ Color = "Black", Size = "Large" \},
                new TShirtType \{ Color = "Gray",  Size = "Medium" \}
            \}
\});

session.Store(new TShirt
\{
    Id = "tshirts/3",
    Manufacturer = "Raven",
    ReleaseYear = 2011,
    Types = new List<TShirtType>
            \{
                new TShirtType \{ Color = "Yellow",  Size = "Small" \},
                new TShirtType \{ Color = "Gray",  Size = "Large" \}
            \}
\});

session.Store(new TShirt
\{
    Id = "tshirts/4",
    Manufacturer = "Raven",
    ReleaseYear = 2012,
    Types = new List<TShirtType>
            \{
                new TShirtType \{ Color = "Blue",  Size = "Small" \},
                new TShirtType \{ Color = "Gray",  Size = "Large" \}
            \}
\});
`}
</CodeBlock>
</TabItem>

Now we want to return all the T-shirts that are manufactured by `Raven` and contain both `Small Blue` and `Large Gray` types.

To do this, we need to do the following:

- add the `Raven.Client.Documents` namespace to usings
- use the `Intersect` query extension:

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="csharp">
{`IList<TShirt> results = session.Query<TShirts_ByManufacturerColorSizeAndReleaseYear.Result, TShirts_ByManufacturerColorSizeAndReleaseYear>()
       .Where(x => x.Manufacturer == "Raven")
       .Intersect()
       .Where(x => x.Color == "Blue" && x.Size == "Small")
       .Intersect()
       .Where(x => x.Color == "Gray" && x.Size == "Large")
       .OfType<TShirt>()
       .ToList();
`}
</CodeBlock>
</TabItem>
<TabItem value="DocumentQuery" label="DocumentQuery">
<CodeBlock language="csharp">
{`IList<TShirt> results = session
    .Advanced
    .DocumentQuery<TShirt, TShirts_ByManufacturerColorSizeAndReleaseYear>()
    .WhereEquals("Manufacturer", "Raven")
    .Intersect()
    .WhereEquals("Color", "Blue")
    .AndAlso()
    .WhereEquals("Size", "Small")
    .Intersect()
    .WhereEquals("Color", "Gray")
    .AndAlso()
    .WhereEquals("Size", "Large")
    .ToList();
`}
</CodeBlock>
</TabItem>
<TabItem value="Index" label="Index">
<CodeBlock language="csharp">
{`public class TShirts_ByManufacturerColorSizeAndReleaseYear : AbstractIndexCreationTask<TShirt>
{
    public class Result
    {
        public string Manufacturer { get; set; }

        public string Color { get; set; }

        public string Size { get; set; }

        public int ReleaseYear { get; set; }
    }

    public TShirts_ByManufacturerColorSizeAndReleaseYear()
    {
        Map = tshirts => from tshirt in tshirts
                         from type in tshirt.Types
                         select new
                         {
                             Manufacturer = tshirt.Manufacturer,
                             Color = type.Color,
                             Size = type.Size,
                             ReleaseYear = tshirt.ReleaseYear
                         };
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index 'TShirts/ByManufacturerColorSizeAndReleaseYear' 
where intersect(Manufacturer = 'Raven', Color = 'Blue' and Size = 'Small', Color = 'Gray' and Size = 'Large')
`}
</CodeBlock>
</TabItem>
</Tabs>

The above query will return `tshirts/1` and `tshirts/4` as a result. The document `tshirts/2` will not be included because it is not manufactured by `Raven`, and `tshirts/3` is not available in `Small Blue` so it does not match **all** the sub-queries.


</LanguageContent>
<LanguageContent language="java">


To allow users to `intersect` queries on the server-side and return only documents that match **all** the provided sub-queries, we introduced the query intersection feature.

Let's consider a case where we have a T-Shirt class:

<TabItem value="intersection_1" label="intersection_1">
<CodeBlock language="java">
{`public class TShirt \{
    private String id;
    private int releaseYear;
    private String manufacturer;
    private List<TShirtType> types;

    public String getId() \{
        return id;
    \}

    public void setId(String id) \{
        this.id = id;
    \}

    public int getReleaseYear() \{
        return releaseYear;
    \}

    public void setReleaseYear(int releaseYear) \{
        this.releaseYear = releaseYear;
    \}

    public String getManufacturer() \{
        return manufacturer;
    \}

    public void setManufacturer(String manufacturer) \{
        this.manufacturer = manufacturer;
    \}

    public List<TShirtType> getTypes() \{
        return types;
    \}

    public void setTypes(List<TShirtType> types) \{
        this.types = types;
    \}
\}

public class TShirtType \{
    private String color;
    private String size;

    public String getColor() \{
        return color;
    \}

    public void setColor(String color) \{
        this.color = color;
    \}

    public String getSize() \{
        return size;
    \}

    public void setSize(String size) \{
        this.size = size;
    \}

    public TShirtType() \{
    \}

    public TShirtType(String color, String size) \{
        this.color = color;
        this.size = size;
    \}
\}
`}
</CodeBlock>
</TabItem>

We will fill our database with few records:

<TabItem value="intersection_3" label="intersection_3">
<CodeBlock language="java">
{`TShirt tShirt1 = new TShirt();
tShirt1.setId("tshirts/1");
tShirt1.setManufacturer("Raven");
tShirt1.setReleaseYear(2010);
tShirt1.setTypes(Arrays.asList(
    new TShirtType("Blue", "Small"),
    new TShirtType("Black", "Small"),
    new TShirtType("Black", "Medium"),
    new TShirtType("Gray", "Large")
));
session.store(tShirt1);

TShirt tShirt2 = new TShirt();
tShirt2.setId("tshirts/2");
tShirt2.setManufacturer("Wolf");
tShirt2.setReleaseYear(2011);
tShirt2.setTypes(Arrays.asList(
    new TShirtType("Blue", "Small"),
    new TShirtType("Black", "Large"),
    new TShirtType("Gray", "Medium")
));
session.store(tShirt2);

TShirt tShirt3 = new TShirt();
tShirt3.setId("tshirts/3");
tShirt3.setManufacturer("Raven");
tShirt3.setReleaseYear(2011);
tShirt3.setTypes(Arrays.asList(
    new TShirtType("Yellow", "Small"),
    new TShirtType("Gray", "Large")
));
session.store(tShirt3);

TShirt tShirt4 = new TShirt();
tShirt4.setId("tshirts/4");
tShirt4.setManufacturer("Raven");
tShirt4.setReleaseYear(2012);
tShirt4.setTypes(Arrays.asList(
    new TShirtType("Blue", "Small"),
    new TShirtType("Gray", "Large")
));
session.store(tShirt4);
`}
</CodeBlock>
</TabItem>

Now we want to return all the T-shirts that are manufactured by `Raven` and contain both `Small Blue` and `Large Gray` types.

To do this, we need to use the `intersect` query method:

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="java">
{`List<TShirts_ByManufacturerColorSizeAndReleaseYear.Result> result = session.query(TShirts_ByManufacturerColorSizeAndReleaseYear.Result.class,
    TShirts_ByManufacturerColorSizeAndReleaseYear.class)
    .whereEquals("manufacturer", "Raven")
    .intersect()
    .whereEquals("color", "Blue")
    .andAlso()
    .whereEquals("size", "Small")
    .intersect()
    .whereEquals("color", "Gray")
    .andAlso()
    .whereEquals("size", "large")
    .toList();
`}
</CodeBlock>
</TabItem>
<TabItem value="Index" label="Index">
<CodeBlock language="java">
{`public static class TShirts_ByManufacturerColorSizeAndReleaseYear extends AbstractIndexCreationTask {
    public static class Result {
        private String manufacturer;
        private String color;
        private String size;
        private int releaseYear;

        public String getManufacturer() {
            return manufacturer;
        }

        public void setManufacturer(String manufacturer) {
            this.manufacturer = manufacturer;
        }

        public String getColor() {
            return color;
        }

        public void setColor(String color) {
            this.color = color;
        }

        public String getSize() {
            return size;
        }

        public void setSize(String size) {
            this.size = size;
        }

        public int getReleaseYear() {
            return releaseYear;
        }

        public void setReleaseYear(int releaseYear) {
            this.releaseYear = releaseYear;
        }
    }

    public TShirts_ByManufacturerColorSizeAndReleaseYear() {
        map = "docs.TShirts.SelectMany(tshirt => tshirt.types, (tshirt, type) => new {" +
            "    manufacturer = tshirt.manufacturer," +
            "    color = type.color," +
            "    size = type.size," +
            "    releaseYear = tshirt.releaseYear" +
            "})";
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index 'TShirts/ByManufacturerColorSizeAndReleaseYear' 
where intersect(manufacturer = 'Raven', color = 'Blue' and size = 'Small', color = 'Gray' and size = 'Large')
`}
</CodeBlock>
</TabItem>
</Tabs>

The above query will return `tshirts/1` and `tshirts/4` as a result. The document `tshirts/2` will not be included because it is not manufactured by `Raven`, and `tshirts/3` is not available in `Small Blue` so it does not match **all** the sub-queries.


</LanguageContent>
<LanguageContent language="nodejs">


To allow users to `intersect` queries on the server-side and return only documents that match **all** the provided sub-queries, we introduced the query intersection feature.

Let's consider a case where we have a T-Shirt class:

<TabItem value="intersection_1" label="intersection_1">
<CodeBlock language="js">
{`class TShirt \{
    constructor(data) \{
        this.id = data.id;
        this.manufacturer = data.manufacturer;
        this.releaseYear = data.releaseYear;
        this.types = data.types;
    \}
\}

class TShirtType \{
    constructor(color, size) \{
        this.color = color;
        this.size = size;
    \}
\}
`}
</CodeBlock>
</TabItem>

We will fill our database with few records:

<TabItem value="intersection_3" label="intersection_3">
<CodeBlock language="js">
{`const tShirt1 = new TShirt(\{
    id: "tshirts/1",
    manufacturer: "Raven",
    releaseYear: 2010,
    types: [
        new TShirtType("Blue", "Small"),
        new TShirtType("Black", "Small"),
        new TShirtType("Black", "Medium"),
        new TShirtType("Gray", "Large")
    ]
\});
await session.store(tShirt1);

const tShirt2 = new TShirt(\{
    id: "tshirts/2",
    manufacturer: "Wolf",
    releaseYear: 2011,
    types: [
        new TShirtType("Blue", "Small"),
        new TShirtType("Black", "Large"),
        new TShirtType("Gray", "Medium")
    ]
\});
await session.store(tShirt2);

const tShirt3 = new TShirt(\{
    id: "tshirts/3",
    manufacturer: "Raven",
    releaseYear: 2011,
    types: [
        new TShirtType("Yellow", "Small"),
        new TShirtType("Gray", "Large")
    ]
\});
await session.store(tShirt3);

const tShirt4 = new TShirt(\{
    id: "tshirts/4",
    manufacturer: "Raven",
    releaseYear: 2012,
    types: [
        new TShirtType("Blue", "Small"),
        new TShirtType("Gray", "Large")
    ]
\});
await session.store(tShirt4);
`}
</CodeBlock>
</TabItem>

Now we want to return all the T-shirts that are manufactured by `Raven` and contain both `Small Blue` and `Large Gray` types.

To do this, we need to use the `intersect` query method:

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="js">
{`const result = await session.query({ 
        indexName: "TShirts/ByManufacturerColorSizeAndReleaseYear"
    })
    .whereEquals("manufacturer", "Raven")
    .intersect()
    .whereEquals("color", "Blue")
    .andAlso()
    .whereEquals("size", "Small")
    .intersect()
    .whereEquals("color", "Gray")
    .andAlso()
    .whereEquals("size", "large")
    .ofType(TShirts_ByManufacturerColorSizeAndReleaseYearResult)
    .all();
`}
</CodeBlock>
</TabItem>
<TabItem value="Index" label="Index">
<CodeBlock language="js">
{`class TShirts_ByManufacturerColorSizeAndReleaseYearResult {
    constructor(data) {
        this.manufacturer = data.manufacturer;
        this.color = data.color;
        this.size = data.size;
        this.releaseYear = data.releaseYear;
    }
}

class TShirts_ByManufacturerColorSizeAndReleaseYear extends AbstractIndexCreationTask {

    constructor() {
        super();

        this.map = \`docs.TShirts.SelectMany(tshirt => tshirt.types, (tshirt, type) => new {
                manufacturer = tshirt.manufacturer,
                color = type.color,
                size = type.size,
                releaseYear = tshirt.releaseYear
            })\`;
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index 'TShirts/ByManufacturerColorSizeAndReleaseYear' 
where intersect(manufacturer = 'Raven', color = 'Blue' and size = 'Small', color = 'Gray' and size = 'Large')
`}
</CodeBlock>
</TabItem>
</Tabs>

The above query will return `tshirts/1` and `tshirts/4` as a result. The document `tshirts/2` will not be included because it is not manufactured by `Raven`, and `tshirts/3` is not available in `Small Blue` so it does not match **all** the sub-queries.


</LanguageContent>

<!---
### Client API
- [How to Use Intersect](../../client-api/session/querying/how-to-use-intersect)


-->